# jetson-profiling

./: .gitignore  CMakeLists.txt
experiments/: CMakeLists.txt
experiments/power/: CMakeLists.txt  pow3  power.c  power.cpp  power.h  power.py  power1  power2  powerh
experiments/power_profiling/: CMakeLists.txt  power_profiling.cpp  power_profiling.h
experiments/recognition/: CMakeLists.txt  myImageNet.cpp  myImageNet.h  recognition.cpp
headers/: config.h.in
scripts/: powe--service.sh  power.sh  run-recognition.sh
services/: .my-profiler-conf  install.sh  my-profiler.service  uninstall.sh
src/: argparse.c  argparse.h  logger.h  profiler.cpp  profiler.h
